# xisfits

./: .gitignore  .travis-ci.yml  .travis.yml  Cargo.toml  LICENSE  README.md  travis-helper.sh
src/: README.md  convert.rs  fitswriter.rs  main.rs  xisfreader.rs
tests/images/: xisf-image-gray-256x256-16bits-zlib.xisf  xisf-image-gray-256x256-16bits-zlib_sh.xisf  xisf-image-gray-256x256-8bits.xisf  xisf-image-gray-256x256-float-32bits.xisf  xisf-image-gray-256x256-float-64bits.xisf  xisf-image-rgb-256x256-16bits.xisf  xisf-image-rgb-256x256-32bits.xisf  xisf-image-rgb-256x256-8bits.xisf
