[package]
name = "xisfits"
version = "0.1.0"
authors = ["rvr"]
edition = "2018"
description = "XISFITS is a command line tool to convert XISF images to FITS."
readme = "README.md"
repository = "https://github.com/vrruiz/xisfits"
license = "MIT"

[badges]
travis-ci = { repository = "vrruiz/xisfits", branch = "master" }

[dependencies]
quick-xml = "0.18.1"
byteorder = "1.3.4"
structopt = "0.3.15"
compress = "0.2.1"
log = "0.4.11"
env_logger = "0.7.1"

# The release profile, used for `cargo build`.
[profile.dev]
incremental = true
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
overflow-checks = true
panic = 'unwind'

# The release profile, used for `cargo build --release`.
[profile.release]
incremental = false
opt-level = 3
debug = false
rpath = false
codegen-units = 1
lto = true
debug-assertions = false
overflow-checks = false
panic = 'unwind'
